cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 23)

add_executable(untitled main.c Trial.c FactorialWhileloop.c GuessingGame.c Marks.c forloop.c print10times.c UnitConverter.c swapping.c SwappingWith2variable.c ASCIIconverter.c TernearyOperator.c Upper_Case.c even_string.c string_userdef_functions.c)

add_executable(Trial Trial.c)
add_executable(IFstatement IFstatement.c)
add_executable(Functions Functions.c)
add_executable(BetterCalculator BetterCalculator.c)
add_executable(antivirus antivirus.c )
add_executable(Arrays Arrays.c)
add_executable(BasicCal BasicCal.c)
add_executable(comments comments.c)
add_executable(constants constants.c)
add_executable(Datatypes Datatypes.c)
add_executable(greatestof3 greatestof3.c)
add_executable(Hello_World_in_C Hello_World_in_C.c)
add_executable(Madlibs Madlibs.c)
add_executable(main main.c)
add_executable(Maxof3no Maxof3no.c)
add_executable(printf printf.c)
add_executable(Return Return.c)
add_executable(Shapes Shapes.c)
add_executable(Story Story.c)
add_executable(struts struts.c)
add_executable(UserInput UserInput.c)
add_executable(workingwithnum workingwithnum.c)
add_executable(FactorialWhileloop FactorialWhileloop.c)
add_executable(Switch cmake-build-debug/Switch.c)

add_executable(GuessingGame GuessingGame.c)
add_executable(evenodd cmake-build-debug/evenodd.c cmake-build-debug/MemoryAddress.c)
add_executable(Marks Marks.c)
add_executable(forloop forloop.c)

add_executable(2Darrays 2Darrays.c)
add_executable(print10times print10times.c)
add_executable(MemoryAddress cmake-build-debug/MemoryAddress.c)
add_executable(UnitConverter UnitConverter.c)
add_executable(swapping swapping.c)
add_executable(SwappingWith2variable SwappingWith2variable.c)
add_executable(ASCIIconverter ASCIIconverter.c)
add_executable(TernearyOperator TernearyOperator.c)
add_executable(Upper_Case Upper_Case.c)
add_executable(even_string even_string.c)
add_executable(string_userdef_functions string_userdef_functions.c)