cmake_minimum_required(VERSION 3.23)
project(School C)

set(CMAKE_C_STANDARD 23)

add_executable(School main.c Calculator.c Vowel.c Numbertype.c "Roots_of_Quardatic .c" factorial.c Tables.c Equation_1.c 28_OCT_Q4.c amstrong_num_checker.c try.c Amstrong_name_Range_checker.c Num_pat_1.c Num_Pat_2.c Palindrome.c Num_Pat_3.c Num_Pat_4.c Num_Pat_5.c ASCII_CONVERTER.c KM_Converter.c Marks.c UpperTOLower.c interchange.c 5_digit_addition.c Maxof3withoutIF.c SumOfNnatural.c Array1.c find_element_in_array.c 2d_array.c transpose_of_matrix.c print_each_word_in_new_line.c Duplicate_in_array_LINEAR_SEARCH.c BINARY_SEARCH.c Duplicate_element_in_Array.c ReversinArray.c area_of_rec_function.c concatination_string.c squaring_through_functions.c call_by_reference.c character_count.c max_min_using_functions.c Area_of_circle_Pointers.c pos_neg_pointers.c Sum_Avg_pointers.c void_generic_pointers.c reverse_array_address_pointers.c prime_numbers.c 5pattern.c struct_1.c malloc.c struct_2.c struct_3.c try2.c selection_sort.c "Linear_seacrch.c" call_by_ref_val.c sorting_using_pointers.c)

add_executable(Calculator Calculator.c)

add_executable(Vowel Vowel.c)
add_executable(Numbertype Numbertype.c)
add_executable(factorial factorial.c)
add_executable(Tables Tables.c)
add_executable(Equation_1 Equation_1.c)
add_executable(28_OCT_Q4 28_OCT_Q4.c)
add_executable(try try.c)
add_executable(amstrong_num_checker amstrong_num_checker.c)
add_executable(Amstrong_name_Range_checker Amstrong_name_Range_checker.c)
add_executable(Num_pat_1 Num_pat_1.c)
add_executable(Num_Pat_2 Num_Pat_2.c)
add_executable(Palindrome Palindrome.c)
add_executable(Num_Pat_3 Num_Pat_3.c)
add_executable(Num_Pat_4 Num_Pat_4.c)
add_executable(Num_Pat_5 Num_Pat_5.c)
add_executable(KM_Converter KM_Converter.c)
add_executable(Marks Marks.c)
add_executable(ASCII_CONVERTER ASCII_CONVERTER.c)
add_executable(UpperTOLower UpperTOLower.c)
add_executable(interchange interchange.c)
add_executable(5_digit_addition 5_digit_addition.c)
add_executable(Maxof3withoutIF Maxof3withoutIF.c)
add_executable(SumOfNnatural SumOfNnatural.c)
add_executable(Array1 Array1.c)
add_executable(find_element_in_array find_element_in_array.c)
add_executable(2d_array 2d_array.c)
add_executable(transpose_of_matric transpose_of_matrix.c)
add_executable(print_each_word_in_new_line print_each_word_in_new_line.c)
add_executable(Duplicate_in_array Duplicate_in_array_LINEAR_SEARCH.c)
add_executable(BINARY_SEARCH BINARY_SEARCH.c)
add_executable(Duplicate_element_in_Array Duplicate_element_in_Array.c)
add_executable(ReversinArray ReversinArray.c)
add_executable(area_of_rec_function area_of_rec_function.c)
add_executable(concatination_string concatination_string.c)
add_executable(squaring_through_functions squaring_through_functions.c)
add_executable(call_by_reference call_by_reference.c)
add_executable(character_count character_count.c)
add_executable(max_min_using_functions max_min_using_functions.c)
add_executable(Area_of_circle_Pointers Area_of_circle_Pointers.c)
add_executable(pos_neg_pointers pos_neg_pointers.c)
add_executable(Sum_Avg_pointers Sum_Avg_pointers.c)
add_executable(void_generic_pointers void_generic_pointers.c)
add_executable(reverse_array_address_pointers reverse_array_address_pointers.c)
add_executable(prime_numbers prime_numbers.c)
add_executable(5pattern 5pattern.c)
add_executable(struct_1 struct_1.c)
add_executable(mslloc malloc.c)
add_executable(malloc malloc.c)
add_executable(struct_2 struct_2.c)
add_executable(struct_3 struct_3.c)
add_executable(try2 try2.c)
add_executable(selection_sort selection_sort.c)


add_executable(Linear_seacrch Linear_seacrch.c)
add_executable(call_by_ref_val call_by_ref_val.c)
add_executable(sorting_using_pointers sorting_using_pointers.c)